crates/bamltype/tests/ui/serde_skip_variant.rs
use bamltype::BamlType;

#[BamlType]
enum Bad {
    #[serde(skip)]
    A,
    B,
}

fn main() {}
